--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <%- include('./navbar.ejs')%>
         <main>
             <%- body %>
