--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,3 +1,14 @@
 <div class="container_home">
-
+  <div class="container_page">
+    <div class="container_box">
+      <div class="feed_header">
+        
+      </div>
+      <div class="box_feed">
+        <img src="/img/find_creator.png" alt="find_creator">
+        <a>Support or follow creators to see posts in your feed.</a>
+        <a href="/search" class="btn">Find Creator</a>
+      </div>
+    </div>
+  </div>
 </div>
