--- a/views/home/navbar.ejs
+++ b/views/home/navbar.ejs
@@ -6,7 +6,7 @@
   </div>
   <ul>
     <li>
-      <a href="/">
+      <a href="/home">
         <i class="fas fa-pager"></i>
         <span class="nav-item">Feed</span>
       </a>
