--- a/css/home/home.css
+++ b/css/home/home.css
@@ -19,7 +19,63 @@
 }
 
 .container_home {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: #F6F7FA;
+}
+
+.container_page {
+  position: absolute;
+  right: 0;
+  width: 85%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F7FA;
+}
+
+.container_box {
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.box_feed {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  height: 500px;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.box_feed img {
+  width: 230px;
+  height: 200px;
+  margin: 20px;
+}
+
+.box_feed .btn {
+  border-radius: 20px;
+  color: #fff;
+  font-family: Poppins-Regular;
+  font-size: 15px;
+  margin: 20px;
+  padding: 10px 30px 10px 30px;
+  width: auto;
+  height: auto;
+  background-color: rgb(98, 108, 228);
+  cursor: pointer;
+  border: 2px solid #6d6d6d;
+}
+
+.box_feed .btn:hover {
+  background-color: rgb(112, 112, 112);
 }
