--- a/views/home/layout.ejs
+++ b/views/home/layout.ejs
@@ -23,4 +23,7 @@
 </body>
 
 <script src="https://kit.fontawesome.com/4419eadbc1.js" crossorigin="anonymous"></script>
+
+<script src="js/home_script.js"></script>
+
 </html> 
