--- a/css/auth/auth.css
+++ b/css/auth/auth.css
@@ -100,6 +100,7 @@ a {
     height: 50px;
     border-radius: 25px;
     padding: 0 30px 0 68px;
+    border: 1px;
 }
 
 .symbol_input100 {
@@ -161,6 +162,7 @@ a {
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
+    border: 1px;
 }
 
 .reg_btn:hover {
@@ -191,6 +193,7 @@ a {
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
+    border: 1px;
 }
 
 .login_btn:hover {
