--- a/views/home/navbar.ejs
+++ b/views/home/navbar.ejs
@@ -12,7 +12,7 @@
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/search">
         <i class="fas fa-compass"></i>
         <span class="nav-item">Find Creator</span>
       </a>
