--- a/css/home/home.css
+++ b/css/home/home.css
@@ -18,6 +18,8 @@
   src: url('../../fonts/montserrat/Montserrat-Bold.ttf');
 }
 
+/* INDEX PAGE */
+
 .container {
   background-color: #F6F7FA;
 }
@@ -82,4 +84,188 @@
 
 .box_feed .btn:hover {
   background-color: rgb(112, 112, 112);
+}
+
+/* SEARCH PAGE  */
+
+.container_search {
+  width: 50%;
+  height: 100vh;
+  position: relative;
+}
+
+.header_search h1 {
+  margin: 84px 0px 20px 0px;
+  font-family: Poppins-Medium;
+}
+
+.search_content  {
+  display: none;
+}
+
+.search_content.show_content {
+  display: block;
+}
+
+.search_bar {
+  height: auto;
+  width: 100%;
+}
+
+.search_box {
+  height: 50px;
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.search_box input {
+  width: 100%;
+}
+
+.search_text {
+  font-family: Poppins-Medium;
+  font-size: 15px;
+  color: #666666;
+  height: 100%;
+  background: #e6e6e6;
+  border-radius: 10px;
+  padding: 0 15px 0 50px;
+  border: 1px;
+}
+
+.symbol_search {
+  font-size: 21px;
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  color: #666666;
+}
+
+.search_box button {
+  width: auto;
+  height: 100%;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #22549F;
+  font-family: Poppins-Medium;
+  font-size: 15px;
+  border: 1px;
+  padding: 14px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.search_box button:hover {
+  background-color: #02265c;
+}
+
+.search_text:hover {
+  background: #c7c7c7;
+}
+
+/* Search Content */
+
+.search_content {
+  position: absolute;
+  left: 40px;
+  margin-top: 14px;
+  width: 84%;
+  height: auto;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.profile_search {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.search_result {
+  position: relative;
+  margin: 3px;
+  height: 60px;
+  width: 95%;
+}
+
+.center_data {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nodata {
+  font-size: 21px;
+}
+
+.search_result button{
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  border: 0px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+
+.search_result button:hover {
+  background-color: #dfdfdf;
+}
+
+.search_result img{
+  margin-left: 10px;
+  height: 80%;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.search_result span{
+  margin-left: 13px;
+}
+
+.creator_info {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.creator_name {
+  font-size: 17px;
+  font-weight: 700;
+}
+
+.creator_desc {
+  font-size: 13px;
+}
+
+/* Header Creator */
+
+.creator_header {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+}
+
+/* Creator List */
+.creator_list {
+  margin-top: 20px;
+  width: 100%;
+  height: auto;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
