--- a/views/home/layout.ejs
+++ b/views/home/layout.ejs
@@ -23,6 +23,7 @@
 </body>
 
 <script src="https://kit.fontawesome.com/4419eadbc1.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script src="js/home_script.js"></script>
 
