--- a/views/home/creator/user.ejs
+++ b/views/home/creator/user.ejs
@@ -15,6 +15,9 @@
                             <p>5.2M Members 41 Posts</p>
                         </div>
                     </div>
+                    <div class="membership">
+                        <a href="/<%=creators[0].pname%>/membership" class="btn_sub">Membership</a>
+                    </div>
                 </div>
             </div>
             <div class="limit_navbar">
