--- a/css/home/home.css
+++ b/css/home/home.css
@@ -298,6 +298,7 @@
 }
 
 .creator_profile {
+  position: relative;
   height: 100%;
   width: 70%;
 }
@@ -337,6 +338,25 @@
   color: #666666;
   margin-top: 10px;
   font-size: 13px;
+}
+
+.membership {
+  position: absolute;
+  right: 50px;
+  top: 45px;
+}
+
+.btn_sub {
+  font-size: 15px;
+  padding: 15px;
+  background-color: #f01f1f;
+  color: #fff;
+  border-radius: 40px;
+  cursor: pointer;
+}
+
+.btn_sub:hover {
+  background-color: #ee5959;
 }
 
 /* Creator Bar */
@@ -380,5 +400,4 @@
 .creator_post {
   height: 600px;
   width: 70%;
-  background-color: #4158d0;
 }
