--- a/views/home/layout.ejs
+++ b/views/home/layout.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/home/home.css">
     <link rel="stylesheet" href="/css/home/navbar.css">
+    <link rel="stylesheet" href="/css/home/membership.css">
 </head>
 
 <body>
