--- a/views/home/search.ejs
+++ b/views/home/search.ejs
@@ -17,7 +17,7 @@
             <div class="search_content" id="search_content">
             </div>
 
-            <div class="creator_header">
+            <div class="creator_header"
                 <h1>CREATOR LIST</h1>
             </div>
 
