--- a/css/global.css
+++ b/css/global.css
@@ -23,13 +23,13 @@
 /*----------- Scrollbar Design -----------*/
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
 }
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgb(218, 216, 216);
     border-radius: 10px;
-}
+} */
 
 ::-webkit-scrollbar-thumb {
     filter: blur(8px);
