--- a/css/home/navbar.css
+++ b/css/home/navbar.css
@@ -31,12 +31,21 @@ nav {
   z-index: 1;
   top: 0;
   bottom: 0;
-  height: 100%;
+  height: 100vh;
   left: 0;
   background: #fff;
   width: 15%;
-  overflow: hidden;
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+
+.container_navbar {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.container_navbar:hover {
+  overflow: scroll;
 }
 
 ul li a {
@@ -89,7 +98,7 @@ ul li a:hover {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .profile {
@@ -179,4 +188,64 @@ ul li a:hover {
 
 .btn_logout {
   color: #f57070;
+}
+
+.title_nav {
+  width: 80%;
+  margin-bottom: 10px;
+}
+
+.title_nav span {
+  font-size: 15px;
+}
+
+.limit_octagram_list {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.octagram_list {
+  height: auto;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.octagram_item {
+  height: 55px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.octagram_item a{
+  height: 100%;
+  width: 100%;
+}
+
+.octagram_list img{
+  height: 40px;
+  width: 40px;
+}
+
+.creator_nav {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.creator_nav:hover {
+  background-color: #eee;
+}
+
+.creator_nav span {
+  position: absolute;
+  margin-left: 50px;
 }
