--- a/views/home/creator/user.ejs
+++ b/views/home/creator/user.ejs
@@ -9,7 +9,7 @@
                         <img src="/img/profile.png" alt="">
                         <div class="creator_detail">
                             <span class="creators_name">
-                                <%= creators[0].pname %>
+                                <%=creators[0].pname%>
                             </span>
                             <span class="creators_desc">Creating website octagram</span>
                             <p>5.2M Members 41 Posts</p>
@@ -24,12 +24,126 @@
                 <div class="navbar">
                     <a href="#">Home</a>
                     <a href="#">About</a>
+                    <a href="#">Review</a>
                 </div>
             </div>
+
+            <% if (!checks) { %>
+
+            <div class="full_package_page">
+                <div class="limit_package_page">
+                    <div class="wrapper">
+                        <input type="radio" name="slider" id="tab-1">
+                        <input type="radio" name="slider" id="tab-2" checked>
+                        <input type="radio" name="slider" id="tab-3">
+                        <header>
+                            <label for="tab-1" class="tab-1">Basic</label>
+                            <label for="tab-2" class="tab-2">Standard</label>
+                            <label for="tab-3" class="tab-3">Team</label>
+                            <div class="slider"></div>
+                        </header>
+                        <div class="card-area">
+                            <div class="cards">
+                                <div class="row row-1">
+                                    <div class="price-details">
+                                        <span class="price">19</span>
+                                        <p>For beginner use</p>
+                                    </div>
+                                    <ul class="features">
+                                        <li><i class="fas fa-check"></i><span>100 GB Premium Bandwidth</span></li>
+                                        <li><i class="fas fa-check"></i><span>FREE 50+ Installation Scripts WordPress
+                                                Supported</span></li>
+                                        <li><i class="fas fa-check"></i><span>One FREE Domain Registration .com and .np
+                                                extensions
+                                                only</span></li>
+                                        <li><i class="fas fa-check"></i><span>Unlimited Email Accounts &
+                                                Databases</span></li>
+                                    </ul>
+                                </div>
+                                <div class="row">
+                                    <div class="price-details">
+                                        <span class="price">99</span>
+                                        <p>For professional use</p>
+                                    </div>
+                                    <ul class="features">
+                                        <li><i class="fas fa-check"></i><span>Unlimited GB Premium Bandwidth</span></li>
+                                        <li><i class="fas fa-check"></i><span>FREE 200+ Installation Scripts WordPress
+                                                Supported</span></li>
+                                        <li><i class="fas fa-check"></i><span>Five FREE Domain Registration .com and .np
+                                                extensions
+                                                only</span></li>
+                                        <li><i class="fas fa-check"></i><span>Unlimited Email Accounts &
+                                                Databases</span></li>
+                                    </ul>
+                                </div>
+                                <div class="row">
+                                    <div class="price-details">
+                                        <span class="price">49</span>
+                                        <p>For team collaboration</p>
+                                    </div>
+                                    <ul class="features">
+                                        <li><i class="fas fa-check"></i><span>200 GB Premium Bandwidth</span></li>
+                                        <li><i class="fas fa-check"></i><span>FREE 100+ Installation Scripts WordPress
+                                                Supported</span></li>
+                                        <li><i class="fas fa-check"></i><span>Two FREE Domain Registration .com and .np
+                                                extensions
+                                                only</span></li>
+                                        <li><i class="fas fa-check"></i><span>Unlimited Email Accounts &
+                                                Databases</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <form action="/membership/prefer" method="POST">
+                            <button>Choose plan</button>
+                            <input type="hidden" name="pname" id="pname" value="<%=creators[0].pname%>">
+                            <input type="hidden" name="id_creator" id="id_creator" value="<%=creators[0].id%>">
+                            <input type="hidden" name="id_user" id="id_user" value="<%=loggedIn.id%>">
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <% } else { %>
+
             <div class="limit_post">
                 <div class="creator_post">
+
+                <% if (posts.length > 0) { %>
+
+                    <% for(var i=0; i < posts.length; i++) { %>
+                        <div class="post_box">
+                            <div class="profile_post">
+                                <img src="/img/profile.png" alt="profile" class="profile_img_post">
+                                <div class="creator_post_name">
+                                    <span class="creator_name">
+                                        <%=creators[0].pname%>
+                                    </span>
+                                    <span class="post_time">1 hr.</span>
+                                </div>
+                            </div>
+                            <div class="post_content_limit">
+                                <div class="post_content">
+                                    <span class="post_title"><%=posts[i].title%></span>
+                                    <span class="post_desc"><%=posts[i].desc%></span>
+                                </div>
+                            </div>
+                        </div>
+                        <% } %>
+
+                <%} else { %>
+
+                    <div class="post_alert">
+                        <h1>There is no post in this creator.</h1>
+                    </div>
+
+                <% } %>
+
                 </div>
             </div>
+
+            <% } %>
+
         </div>
     </div>
 </div>
