--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -4,11 +4,40 @@
       <div class="feed_header">
         
       </div>
-      <div class="box_feed">
-        <img src="/img/find_creator.png" alt="find_creator">
-        <a>Support or follow creators to see posts in your feed.</a>
-        <a href="/search" class="btn">Find Creator</a>
-      </div>
+
+      <% if (posts.length > 0) { %>
+
+        <% for(var i=0; i < posts.length; i++) { %>
+          <div class="post_box">
+              <div class="profile_post">
+                  <img src="/img/profile.png" alt="profile" class="profile_img_post">
+                  <div class="creator_post_name">
+                      <span class="creator_name">
+                          <%=posts[i].pname%>
+                      </span>
+                      <span class="post_time">1 hr.</span>
+                  </div>
+              </div>
+              <div class="post_content_limit">
+                  <div class="post_content">
+                      <span class="post_title"><%=posts[i].title%></span>
+                      <span class="post_desc"><%=posts[i].desc%></span>
+                  </div>
+              </div>
+          </div>
+          <% } %>
+
+        <%} else { %>
+
+          <div class="box_feed">
+            <img src="/img/find_creator.png" alt="find_creator">
+            <a>Support or follow creators to see posts in your feed.</a>
+            <a href="/search" class="btn">Find Creator</a>
+          </div>
+    
+
+          <% } %>
+
     </div>
   </div>
 </div>
