--- a/views/home/layout.ejs
+++ b/views/home/layout.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/home/home.css">
     <link rel="stylesheet" href="/css/home/navbar.css">
     <link rel="stylesheet" href="/css/home/membership.css">
+    <link rel="stylesheet" href="/css/home/setting.css">
 </head>
 
 <body>
