--- a/views/home/navbar.ejs
+++ b/views/home/navbar.ejs
@@ -19,13 +19,13 @@
         </a>
       </li>
       <li>
-        <a href="/">
+        <a href="/message">
           <i class="fas fa-envelope"></i>
           <span class="nav-item">Message</span>
         </a>
       </li>
       <li>
-        <a href="/">
+        <a href="/setting">
           <i class="fas fa-gear"></i>
           <span class="nav-item">Setting</span>
         </a>
