--- a/views/home/search.ejs
+++ b/views/home/search.ejs
@@ -26,7 +26,7 @@
                     <% for(var i=0; i < creators.length; i++) { %>
                         <li class="search_result">
                             <a href="/<%=creators[i].pname%>">
-                                <img src="/img/profile.png" alt="">
+                                <img src="<%=creators[i].img%>" alt="">
                                 <div class="creator_info">
                                     <span class="creator_name">
                                         <%= creators[i].pname %>
