--- a/views/home/setting.ejs
+++ b/views/home/setting.ejs
@@ -7,10 +7,9 @@
                         <span>Profile</span>
                         <form action="/upload" method="POST" enctype="multipart/form-data">
                             <div class="upload_pic">
-                                <form action="/upload" method="POST" enctype="multipart/form-data">
-                                    <img src="/img/profile.png" alt="profile">
-                                    <button class="btn_upload">Upload photo</button>
-                                </form>
+                                <img src="/img/profile.png" alt="profile">
+                                <input type="file" name="myImage">
+                                <button class="btn_upload">Upload photo</button>
                             </div>
                         </form>
                     </div>
