--- a/css/home/setting.css
+++ b/css/home/setting.css
@@ -49,6 +49,7 @@
 }
 
 .btn_upload {
+    content: 'Upload';
     height: 40px;
     width: 120px;
     border: 1px;
@@ -63,6 +64,10 @@
 
 .btn_upload:hover {
     background-color: #d8d8d8;
+}
+
+.btn_upload::-webkit-file-upload-button {
+  visibility: hidden;
 }
 
 .btn_save {
