--- a/views/home/creator/user.ejs
+++ b/views/home/creator/user.ejs
@@ -6,7 +6,7 @@
             <div class="limit_creator_profile">
                 <div class="creator_profile">
                     <div class="creator_content">
-                        <img src="/img/profile.png" alt="">
+                        <img src="<%=creators[0].img%>" alt="">
                         <div class="creator_detail">
                             <span class="creators_name">
                                 <%=creators[0].pname%>
@@ -114,7 +114,7 @@
                     <% for(var i=0; i < posts.length; i++) { %>
                         <div class="post_box">
                             <div class="profile_post">
-                                <img src="/img/profile.png" alt="profile" class="profile_img_post">
+                                <img src="<%=creators[0].img%>" alt="profile" class="profile_img_post">
                                 <div class="creator_post_name">
                                     <span class="creator_name">
                                         <%=creators[0].pname%>
