--- a/views/creator/index.ejs
+++ b/views/creator/index.ejs
@@ -16,7 +16,7 @@
                         </div>
                     </div>
                     <div class="post">
-                        <a href="#" class="btn_post"><i class="fa-solid fa-pen-to-square fa-lg fas"></i>Create</a>
+                        <a href="/post/create" class="btn_post"><i class="fa-solid fa-pen-to-square fa-lg fas"></i>Create</a>
                     </div>
                 </div>
             </div>
