--- a/views/creator/navbar.ejs
+++ b/views/creator/navbar.ejs
@@ -31,10 +31,10 @@
         </div>
       </div>
 
-      <div onclick="" class="ellipsis">
-        <a onclick="ShowEllipsis()" class="drop_menu"><i class="fas fa-ellipsis-vertical drop_menu"></i></a>
-        <div class="popup">
-          <ul class="ellipsis_popups" id="ellipsis_popups">
+      <div class="left_ellipsis">
+        <a onclick="ShowEllipsis()" class="ellipsis"><i class="fas fa-ellipsis-vertical"></i></a>
+        <div class="popup" id="popup">
+          <ul class="ellipsis_popups">
             <li><a href="#">Creator resources</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="/logout" class="btn_logout">Log out</a></li>
