--- a/css/home/home.css
+++ b/css/home/home.css
@@ -25,7 +25,7 @@
 }
 
 .container_home {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background-color: #F6F7FA;
 }
@@ -34,7 +34,7 @@
   position: absolute;
   right: 0;
   width: 85%;
-  height: 100vh;
+  height: auto;
   display: flex;
   justify-content: center;
   background-color: #F6F7FA;
@@ -42,11 +42,13 @@
 
 .container_box {
   width: 50%;
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: #F6F7FA;
+  text-align: start;
 }
 
 .box_feed {
@@ -480,4 +482,24 @@
 
 .post_alert {
   width: 100%;
+}
+
+.container_post {
+  height: 100%;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.header_feed {
+  display: flex;
+  margin-top: 100px;
+  margin-bottom: 60px;
+}
+
+.limiter_post {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
