--- a/views/creator/layout.ejs
+++ b/views/creator/layout.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/creator/navbar.css">
     <link rel="stylesheet" href="/css/creator/home.css">
+    <link rel="stylesheet" href="/css/creator/post.css">
 </head>
 
 <body>
@@ -25,6 +26,6 @@
 <script src="https://kit.fontawesome.com/4419eadbc1.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script src="js/creator.script.js"></script>
+<script src="/js/creator.script.js"></script>
 
 </html> 
