--- a/views/creator/create/image.ejs
+++ b/views/creator/create/image.ejs
@@ -1,6 +1,6 @@
 <div class="container_home">
     <div class="container_page">
-        <form class="container_post_text" action="/text/create" method="POST">
+        <form class="container_post_text" action="/post/create" method="POST">
             
         </form>
     </div>
