--- a/views/home/navbar.ejs
+++ b/views/home/navbar.ejs
@@ -9,27 +9,33 @@
       <li>
         <a href="/home">
           <i class="fas fa-pager"></i>
-          <span class="nav-item">Feed</span>
+          <span class="nav-item">หน้าหลัก</span>
         </a>
       </li>
       <li>
         <a href="/search">
           <i class="fas fa-compass"></i>
-          <span class="nav-item">Find Creator</span>
+          <span class="nav-item">ค้นหาคริเอเตอร์</span>
         </a>
       </li>
       <li>
         <a href="/message">
           <i class="fas fa-envelope"></i>
-          <span class="nav-item">Message</span>
+          <span class="nav-item">ข้อความ</span>
         </a>
       </li>
       <li>
         <a href="/setting">
           <i class="fas fa-gear"></i>
-          <span class="nav-item">Setting</span>
+          <span class="nav-item">ตั้งค่า</span>
         </a>
       </li>
+        <li>
+          <a href="/creator">
+            <i class="fas fa-house-user"></i>
+            <span class="nav-item">คริเอเตอร์</span>
+          </a>
+        </li>
     </ul>
 
     <div class="underline"></div>
