--- a/views/home/search.ejs
+++ b/views/home/search.ejs
@@ -2,7 +2,7 @@
     <div class="container_page">
         <div class="container_search">
             <div class="header_search">
-                <h1>Find creators</h1>
+                <h1>ค้นหาคริเอเตอร์</h1>
             </div>
             <div class="search_bar">
                 <div class="search_box">
@@ -10,7 +10,7 @@
                     <span class="symbol_search">
                         <i class="fas fa-magnifying-glass" aria-hidden="true"></i>
                     </span>
-                    <button>Search</button>
+                    <button>ค้นหา</button>
                 </div>
             </div>
 
