--- a/views/creator/index.ejs
+++ b/views/creator/index.ejs
@@ -46,6 +46,7 @@
                             </div>
                             <div class="post_content_limit">
                                 <div class="post_content">
+                                    <img src="<%=posts[i].img%>">
                                     <span class="post_title"><%=posts[i].title%></span>
                                     <span class="post_desc"><%=posts[i].desc%></span>
                                 </div>
