--- a/views/home/setting.ejs
+++ b/views/home/setting.ejs
@@ -1,28 +1,27 @@
 <div class="container_home">
     <div class="container_page">
         <div class="container_setting">
-            <div class="setting_box">
-                <div class="setting_profile">
-                    <div class="setting_grid">
-                        <span>Profile</span>
-                        <form action="/upload" method="POST" enctype="multipart/form-data">
+            <div class="setting">
+                <div class="setting_box">
+                    <div class="setting_profile">
+                        <div class="setting_grid">
+                            <span>Profile</span>
                             <div class="upload_pic">
-                                <img src="/img/profile.png" alt="profile">
-                                <input type="file" name="myImage">
-                                <button class="btn_upload">Upload photo</button>
+                                <img src="<%= loggedIn.img %>" alt="profile">
+                                <!-- <button class="btn_upload">Upload photo</button> -->
                             </div>
-                        </form>
-                    </div>
-                    <div class="setting_grid">
-                        <span>Display name</span>
-                        <input type="text" name="email" value="<%= loggedIn.name %>">
-                    </div>
-                    <div class="setting_grid">
-                        <span>Email</span>
-                        <input type="text" name="email" value="<%= loggedIn.email %>">
-                    </div>
-                    <div class="setting_grid">
-                        <button class="btn_save">Save</button>
+                        </div>
+                        <div class="setting_grid">
+                            <span>Display name</span>
+                            <input type="text" name="email" value="<%= loggedIn.name %>">
+                        </div>
+                        <div class="setting_grid">
+                            <span>Email</span>
+                            <input type="text" name="email" value="<%= loggedIn.email %>">
+                        </div>
+                        <div class="setting_grid">
+                            <button class="btn_save">Save</button>
+                        </div>
                     </div>
                 </div>
             </div>
