--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -20,6 +20,7 @@
                 </div>
                 <div class="post_content_limit">
                   <div class="post_content">
+                    <img src="<%=posts[i].img_post%>">
                     <span class="post_title">
                       <%=posts[i].title%>
                     </span>
