--- a/css/home/setting.css
+++ b/css/home/setting.css
@@ -55,10 +55,14 @@
     border-radius: 20px;
     cursor: pointer;
     background-color: #eeeeee;
-    margin-left: 20px;
-    margin-right: 20px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
     margin-top: auto;
     margin-bottom: auto;
+    margin-left: 10px;
 }
 
 .btn_upload:hover {
@@ -111,3 +115,10 @@
     align-items: center;
   }
   
+.old_img {
+    display: block;
+}
+
+.new_img {
+    display: none;
+}
